# data-pipeline

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/: config.py  main.py
src/build_db/: graph_db.py  relational_db.py
src/build_db/models/edges/: has_writing_style.py  is_derived_from.py  is_embodied_in.py  is_located.py  is_materialized_on.py
src/build_db/models/nodes/: _base.py  language.py  part.py  place.py  scripta.py  witness.py
src/core/: init_db.py
src/db/: __init__.py  init_db.py
src/db/connections/: heurist_db.py  kuzu_db.py
src/db/creation/: graph_db.py  relational_db.py
src/db/creation/models/edges/: _base.py  has_genre.py  is_part_of.py  is_realized_in.py
src/db/creation/models/nodes/: _base.py  document.py  part.py  repository.py  story.py
src/db/creators/: __init__.py  graph_db.py
src/db/creators/models/edges/: __init__.py  has_language.py
src/db/creators/models/nodes/: __init__.py  genre.py  storyverse.py  text.py
src/db_conn/: __init__.py  heurist_db.py  kuzu_db.py
src/models/: document.py  part.py  place.py  repository.py  scripta.py  witness.py
src/static_files/: witness_trees.py
src/static_files/builders/: witness.py
src/trees/: witness_trees.py
src/trees/builders/: witness.py
tests/: conftest.py
tests/e2e/: test_builds.py  test_init.py
tests/unit/: test_witness_trees.py
