[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lostma-pipeline"
version = "0.0.1"
description = "ETL and pivot processes for LostMa data pipeline"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "pydantic >= 2.7.0 , < 3.0.0",
    "duckdb >= 1.2.1",
    "heurist-api>=0.2.3",
    "pydantic-settings>=2.9.1",
    "kuzu>=0.10.0",
]

[project.optional-dependencies]
dev = ["black>=24.1.0", "isort>=5.13.0", "pytest", "pytest-dependency>=0.6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
lostma = "src.main:cli"

[tool.pytest.ini_options]
# Ignore the DB tests when running full pytest
addopts = ["--import-mode=importlib", "-p no:warnings"]
testspaths = ["tests/"]
